--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -10,9 +10,8 @@
 
      <!------------------- SHOPPING GUIDE ------------------>
                 <div class="col-lg-3 col-md-6 mt-2">
-                    <div class=" shadow rounded py-3 px-2 shop-section">
-                        <h5 class="fontsize mb-2 text-mainColor text-center ">SHOPPING GUIDE</h5>
-                        <hr class="">
+                    <div class="py-3 px-2 shop-section">
+                        <h5 class="fontsize mb-3 text-mainColor ">SHOPPING GUIDE</h5>
                         <ul class="list-unstyled ml-4">
                             <li class="mt-2">
                                 <i class="fas fa-chevron-right "></i>
@@ -37,9 +36,8 @@
 
        <!------------------------ LINKS ----------------------------->
                 <div class="col-lg-3 col-md-6 mt-2">
-                    <div  class=" shadow rounded py-3 px-2 shop-section">
-                        <h5 class="fontsize mb-2 text-mainColor text-center">USEFUL LINKS</h5>
-                        <hr class="">
+                    <div  class="  py-3 px-2 shop-section">
+                        <h5 class="fontsize mb-3 text-mainColor">USEFUL LINKS</h5>
                         <ul class="list-unstyled ml-4">
                             <li class="mt-2">
                                 <i class="fas fa-chevron-right"></i>
