--- a/src/app/shell/footer/footer.component.scss
+++ b/src/app/shell/footer/footer.component.scss
@@ -14,9 +14,9 @@ footer .footer-content{
     background-color: rgba(0,0,0,0.5);
     color: white;
 }
-.shop-section{
-    border: 1px solid rgb(119, 117, 117);
-}
+// .shop-section{
+//     border: 1px solid rgb(119, 117, 117);
+// }
 
 .shop-section h5{
    
