--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -20,30 +20,19 @@
 .list-categ {
     cursor: pointer;
     font-size: 20px;
-    margin-left: 20px;
+    color: $mainColor;
      
 }
-.list-categ:hover{
-  color: $mainColor;
-  transition: all 1s;
-}
-.line{
-    padding-top:2px;
-    margin-left: 25px;
-    margin-top: 5px;
-    width: 20px;
-    background-color: $mainColor
-}
-.list-categ:hover .line{
-    
-    width: 40px;
-    transition: all 1s ease-in-out;
+.category-img{
+    width: 50px;
+   
 }
 
+
 @media only screen and (max-width: 979px) {
-        .navbar{
-             background-color: $mainColor;
-             border-radius: 20px;
+        .navbar .nav-item{
+            background: #000;
+            text-align: left;
         }
         .line{
             display: none;
@@ -117,65 +106,16 @@
     line-height: 2;
 }
 
-/*********** media query of slider **********/
-// @media only screen and (max-width: 600px) {
-//     .slider{
 
+.carousel-control-prev{
+    // background: #000;
+    margin-left: -166px;
 
-//     }
-//   }
-
-
-// .header-img{
-//     background-image: url(../../../assets/images/promo-bg-2.jpg);
-//     background-size: cover;
-//     width: 100%;
-//     height: 100%;
-// }
-
-
-
-.header-img{
-    background-image: url(../../../assets/images/promo-bg-2.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    height:40%;
-    width: 100%;
-    position: relative;
 }
-
-// .header-img .navbar{
-//     z-index: 9999999999;
-// }
-.header-img .overLay{
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
- 
-    background-color: rgba(13, 14, 13, 0.5);
+.carousel-control-next{
+    // background-color: #000;
+    margin-right: -166px;
 }
-.header-img .overLay h1{
-    font-size: 50px;
-}
-
-@media only screen and (max-width: 979px) {
-    .header-img{
-        height: 60%;
-       
-    }
-    .overLay{
-        align-items: flex-start !important;
-
-    }
-
-    .header-content{
-        margin-top: 25px;
-    }
-  }
-
-
-// new
-// .list-categ {
-    
+// .carousel .carousel-control-prev .carousel-control-prev-icon{
+//    color: turquoise !important;
 // }
