--- a/src/app/shell/navbar/navbar.component.html
+++ b/src/app/shell/navbar/navbar.component.html
@@ -1,73 +1,82 @@
 <section>
     <div class="">
         <!-------------------- main navbar ----------------------------->
-<nav class="navbar navbar-expand-lg navbar-dark nav-color ">
-  
-    <div class="container">
-        <a class="navbar-brand">
-            <img src="../../../assets/images/logo.png" class="w-25 rounded-circle" alt="">
-        </a>
-        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-        <div id="my-nav" class="collapse navbar-collapse">
-            <ul class="navbar-nav m-auto">
-                <li class="nav-item ">
-                    <a class="nav-link mr-2" [routerLinkActive]="['active']" [routerLink]="['home']">Home </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['trackorder']" tabindex="-1" aria-disabled="true">Track Order</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLinkActive]="['active']" [routerLink]="['contactus']" tabindex="-1" aria-disabled="true">contact us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLinkActive]="['active']" [routerLink]="['login']" tabindex="-1" aria-disabled="true">Login</a>
-                </li>
+        <nav class="navbar navbar-expand-lg nav-color">
 
-                <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLinkActive]="['active']" [routerLink]="['signup']" tabindex="-1" aria-disabled="true">Signup</a>
-                </li>
+            <div class="container">
+                <a class="navbar-brand">
+                    <img src="../../../assets/images/logo.png" class="w-25 rounded-circle" alt="">
+                </a>
+                <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="my-nav" class="collapse navbar-collapse">
+                    <ul class="navbar-nav m-auto  ">
+                        <li class="nav-item ">
+                            <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['home']">Home </a>
 
-                <li class="nav-item ">
-                    <a class="nav-link mr-2" [routerLinkActive]="['active']" [routerLink]="['Contract']">Contract </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-------------------- end main navbar ----------------------------->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link mr-2  " [routerLinkActive]="['active']" [routerLink]="['trackorder']"
+                                tabindex="-1" aria-disabled="true">Track Order</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['contactus']"
+                                tabindex="-1" aria-disabled="true">contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['login']"
+                                tabindex="-1" aria-disabled="true">Login</a>
+                        </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['signup']"
+                                tabindex="-1" aria-disabled="true">Signup</a>
+                        </li>
 
-
-
-<!---------------------setting-spinner --------------------------->
-<div class="setting-spinner d-flex justify-align-center">
-    <div class="setting bg-light  border rounded"> 
-         <i (click)="showSpinnerSitting()" class="fas fa-cog fa-spin fa-2x text-mainColor "></i>
-   </div>
-      <div *ngIf="show" class=" bg-light border rounded px-3">
-          <!-----------------------------languages----------------------->
-          <div class="lang py-3 border-bottom">
-              <h6 class="text-mainColor">Language</h6>
-            <div class=" arabEng">
-                <div class=" mr-4">
-                    <img src="../../../assets/images/saudi-arabia.png"  alt="">
-                    <span>Arabic</span>
-                </div>
-
-                <div class="">
-                    <img src="../../../assets/images/english-language.png" alt="">
-                    <span class="">English</span>
+                        <li class="nav-item ">
+                            <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                                [routerLink]="['Contract']">Contract </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-          </div>
-       <!-------------------mood-------------------------->
-        
-      </div>
-  </div>
-  <!---------------------end setting-spinner --------------------------->
+        </nav>
+        <!-------------------- end main navbar ----------------------------->
+
+
+
+
+        <!---------------------setting-spinner --------------------------->
+        <div class="setting-spinner d-flex justify-align-center">
+            <div class="setting bg-light  border rounded">
+                <i (click)="showSpinnerSitting()" class="fas fa-cog fa-spin fa-2x text-mainColor "></i>
+            </div>
+            <div *ngIf="show" class=" bg-light border rounded px-3">
+                <!-----------------------------languages----------------------->
+                <div class="lang py-3 border-bottom">
+                    <h6 class="text-mainColor">Language</h6>
+                    <div class=" arabEng">
+                        <div class=" mr-4">
+                            <img src="../../../assets/images/saudi-arabia.png" alt="">
+                            <span>Arabic</span>
+                        </div>
+
+                        <div class="">
+                            <img src="../../../assets/images/english-language.png" alt="">
+                            <span class="">English</span>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------mood-------------------------->
+
+            </div>
+        </div>
+        <!---------------------end setting-spinner --------------------------->
     </div>
 
-  
+
 </section>
+
+
