--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -8,15 +8,13 @@
 
             <div class="row">
 
-<<<<<<< HEAD
      <!------------------- SHOPPING GUIDE ------------------>
                 <div class="col-lg-3 col-md-6 mt-2">
                     <div class="py-3 px-2 shop-section">
-=======
+
        <!------------------- SHOPPING GUIDE ------------------>
                 <div class="col-lg-3 col-md-6 mt-2">
                     <div class="py-3 px-3 shop-section shadow">
->>>>>>> a27b93b (update)
                         <h5 class="fontsize mb-3 text-mainColor ">SHOPPING GUIDE</h5>
                         <ul class="list-unstyled ml-4">
                             <li class="mt-2">
@@ -37,21 +35,19 @@
                         </ul>                
                     </div>
                 </div>      
-<<<<<<< HEAD
      <!-------------------end SHOPPING GUIDE ------------------>
 
 
        <!------------------------ LINKS ----------------------------->
                 <div class="col-lg-3 col-md-6 mt-2">
                     <div  class="  py-3 px-2 shop-section">
-=======
+
      
 
 
         <!------------------------ LINKS ----------------------------->
                 <div class="col-lg-3 col-md-6 mt-2">
                     <div  class="py-3 px-3 shop-section shadow">
->>>>>>> a27b93b (update)
                         <h5 class="fontsize mb-3 text-mainColor">USEFUL LINKS</h5>
                         <ul class="list-unstyled ml-4">
                             <li class="mt-2">
@@ -71,17 +67,15 @@
                     </div>
 
                 </div>
-<<<<<<< HEAD
      <!------------------------end LINKS ----------------------------->
 
 
  <!------------------------ NewsLetter ----------------------------->
-=======
+
   
 
 
         <!------------------------ NewsLetter form ----------------------------->
->>>>>>> a27b93b (update)
                 <div class="col-lg-6 col-md-12">
                     <div class="p-4">
                         <h3 class="fontsize mb-2 text-white">SIGN UP FOR NEWSLETTER</h3>
@@ -109,7 +103,6 @@
                         </div>
                     </div>
                 </div>
-<<<<<<< HEAD
 <!------------------------end  NewsLetter ----------------------------->
 
             </div>
@@ -117,35 +110,35 @@
 
             <!------------------------copyright----------------------------->
 
-=======
+
 
 
             </div>
 
 
         <!------------------------copyright----------------------------->
->>>>>>> a27b93b (update)
             <div class="row mt-5">
                 <div class="col-md-5 mx-auto text-center">
                     <div>
                         © 2020 LEEN ALKHAIR. All Rights Reserved.
                     </div>
                 </div>
-<<<<<<< HEAD
 
                 
             </div>
 
              <!------------------------end copyright----------------------------->
-=======
+
             </div>
 
->>>>>>> a27b93b (update)
 
 
 
         </div>
 
 
+    </div>
+
+        </div>
     </div>
 </footer>
